Fix contrast

--- a/src/css/sass/data-visualizations.scss
+++ b/src/css/sass/data-visualizations.scss
@@ -190,7 +190,7 @@ body {
     padding: 1.5rem;
     background-color: #F2E1DA;
     figcaption {
-      color: #6C6B77;
+      color: #5E5E6A;
     }
     h3, h4 {
       margin-top: 0;
